// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptimizeForCharacter basic test 1`] = `
Object {
  "elapsed": 135.03969999999993,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.214,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.3064702556381076,
        "comboDamage": 570220.9796803711,
        "dps": 87450.89806786766,
        "modifiedDamage": 63161.384545898436,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.4398120000000008,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.3486508250534779,
        "comboDamage": 262376.3643029649,
        "dps": 69256.68177811963,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21900.35722477064,
        "chargeTime": 0.14354698320383638,
        "comboDamage": 100358.38698251145,
        "dps": 65018.03189314285,
        "modifiedDamage": 85411.39317660549,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 10467.14404296875,
        "chargeTime": 0.4791224809494992,
        "comboDamage": 132019.86040571253,
        "dps": 58489.92497357823,
        "modifiedDamage": 61232.79265136719,
      },
      "helm": "Magepower Shishak",
      "weapon": "Excalibur",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.8131140000000006,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.42592702306631247,
        "comboDamage": 227812.9503777715,
        "dps": 53741.624376397966,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.7288200000000007,
        "baseDmg": 9148.44873046875,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 190351.47998450394,
        "dps": 45799.03695541105,
        "modifiedDamage": 35678.95004882813,
      },
      "helm": "Steel Mask",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.92252,
        "baseDmg": 11373.7470703125,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 108456.13949350783,
        "dps": 45190.72678672938,
        "modifiedDamage": 44357.613574218754,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Tournesol",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 8571.51953125,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 130041.1971226875,
        "dps": 39248.32108286651,
        "modifiedDamage": 33428.926171875,
      },
      "helm": "Steel Mask",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 7912.171875,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 120038.02811325001,
        "dps": 36229.21946110755,
        "modifiedDamage": 30857.4703125,
      },
      "helm": "Steel Mask",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 81083.06387122501,
        "dps": 35949.671602737595,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Ragnarok",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9466040000000002,
        "baseDmg": 8489.10107421875,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 80949.14759298049,
        "dps": 33935.10313891144,
        "modifiedDamage": 33107.49418945313,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Simha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 8983.61181640625,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 75538.922751825,
        "dps": 33491.5743991316,
        "modifiedDamage": 35036.08608398437,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Ultima Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 103782.87847291408,
        "dps": 31323.179325749235,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Steel Mask",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.0063000000000004,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.4130476567308401,
        "comboDamage": 99336.68986198244,
        "dps": 29051.357110892888,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 7582.498046875,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 63757.6228731,
        "dps": 28268.117841468877,
        "modifiedDamage": 29571.7423828125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Save the Queen",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7226228000000001,
        "baseDmg": 7582.498046875,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 59484.387811814064,
        "dps": 27520.858931435756,
        "modifiedDamage": 29571.7423828125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Karkata",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 8159.42724609375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 54813.62881777149,
        "dps": 27241.88672264718,
        "modifiedDamage": 31821.766259765627,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Durandal",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 5851.71044921875,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 88778.12495875782,
        "dps": 26794.52689311079,
        "modifiedDamage": 22821.670751953126,
      },
      "helm": "Steel Mask",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 7829.75341796875,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 52598.93674432617,
        "dps": 26141.20443082305,
        "modifiedDamage": 30536.038330078125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Stoneblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 57520.46411377501,
        "dps": 25502.75848741214,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Claymore",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 7417.6611328125,
        "chargeTime": 0.4774444884082023,
        "comboDamage": 49830.57165251953,
        "dps": 24442.272990445366,
        "modifiedDamage": 28928.87841796875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Defender",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 5109.9443359375,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 77524.55982314063,
        "dps": 23398.03756863196,
        "modifiedDamage": 19928.78291015625,
      },
      "helm": "Steel Mask",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Amber Armlet",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.377954,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.35918933233338823,
        "comboDamage": 40237.54811680957,
        "dps": 23163.05590210635,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 45954.86052399024,
        "dps": 22839.157555350666,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Deathbringer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.4130476567308401,
        "comboDamage": 66270.99468752345,
        "dps": 21670.73090323661,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6428.6396484375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 43186.4954321836,
        "dps": 21463.304690570505,
        "modifiedDamage": 25071.69462890625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Runeblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6016.54736328125,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 40418.130340376956,
        "dps": 20087.451825790344,
        "modifiedDamage": 23464.534716796876,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Diamond Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 4120.9228515625,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 62519.80630898438,
        "dps": 18869.385135993514,
        "modifiedDamage": 16071.59912109375,
      },
      "helm": "Steel Mask",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 37096.09223020898,
        "dps": 18436.428388054148,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Bastard Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 5027.52587890625,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 33774.05412004102,
        "dps": 16785.40495031796,
        "modifiedDamage": 19607.350927734376,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Platinum Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 4533.01513671875,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 30452.01600987305,
        "dps": 15134.381512581765,
        "modifiedDamage": 17678.759033203125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Icebrand",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 3296.73828125,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 50015.845047187504,
        "dps": 15095.508108794811,
        "modifiedDamage": 12857.279296875,
      },
      "helm": "Steel Mask",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 4203.34130859375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 28237.323936427736,
        "dps": 14033.699220757637,
        "modifiedDamage": 16393.031103515626,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Demonsbane",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3708.83056640625,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 24915.285826259766,
        "dps": 12382.675783021445,
        "modifiedDamage": 14464.439208984375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Flametongue",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3296.73828125,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 22146.920734453124,
        "dps": 11006.822918241283,
        "modifiedDamage": 12857.279296875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Lohengrin",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3131.9013671875,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 21039.57469773047,
        "dps": 10456.48177232922,
        "modifiedDamage": 12214.41533203125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Blood Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 2142.8798828125,
        "chargeTime": 0.4274132450314613,
        "comboDamage": 32510.299280671876,
        "dps": 9812.080270716628,
        "modifiedDamage": 8357.23154296875,
      },
      "helm": "Steel Mask",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2884.64599609375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 19378.555642646486,
        "dps": 9630.970053461124,
        "modifiedDamage": 11250.119384765625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Ancient Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2472.5537109375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 16610.190550839845,
        "dps": 8255.117188680962,
        "modifiedDamage": 9642.95947265625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Zwill Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2060.46142578125,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 13841.825459033204,
        "dps": 6879.264323900802,
        "modifiedDamage": 8035.799560546875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Iron Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.4130476567308401,
        "comboDamage": 12734.479422310547,
        "dps": 6410.995858236318,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 1318.6953125,
        "chargeTime": 0.5566863348265563,
        "comboDamage": 20006.338018875,
        "dps": 5811.460426043747,
        "modifiedDamage": 5142.911718750001,
      },
      "helm": "Steel Mask",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1648.369140625,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 11073.460367226562,
        "dps": 5503.411459120642,
        "modifiedDamage": 6428.6396484375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Longsword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6608071999999998,
        "baseDmg": 1338.886467889908,
        "chargeTime": 0.272115331394723,
        "comboDamage": 8742.892217609173,
        "dps": 4523.146725027121,
        "modifiedDamage": 5221.657224770642,
      },
      "helm": "Steel Mask",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.4130476567308401,
        "comboDamage": 7751.422257058594,
        "dps": 3902.3453050134112,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.43880638940178496,
        "comboDamage": 7751.422257058594,
        "dps": 3852.3880213844495,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Broadsword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.4055544672616096,
        "comboDamage": 519.52265625,
        "dps": 323.5783443311542,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Bonebreaker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 1.12890625,
        "chargeTime": 0.2792585337299619,
        "comboDamage": 5.98771875,
        "dps": 4.047783814301832,
        "modifiedDamage": 4.4027343750000005,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Excalipur",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 2`] = `
Object {
  "elapsed": 92.89999999999998,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.214,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.3166078812116493,
        "comboDamage": 570220.9796803711,
        "dps": 87315.14585661753,
        "modifiedDamage": 63161.384545898436,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.3511010462877478,
        "comboDamage": 262376.3643029649,
        "dps": 70556.67645882623,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21679.366972477063,
        "chargeTime": 0.1437509440212865,
        "comboDamage": 99345.69915137615,
        "dps": 64353.449975934906,
        "modifiedDamage": 84549.53119266055,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 11388.1405859375,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 172773.03392912063,
        "dps": 55968.255171523255,
        "modifiedDamage": 44413.74828515625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Vrscika",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.72882,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.4289652973968073,
        "comboDamage": 227812.9503777715,
        "dps": 54791.89859091699,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 9102.840087890625,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 189402.50241785747,
        "dps": 49771.44444052309,
        "modifiedDamage": 35501.07634277344,
      },
      "helm": "Magepower Shishak",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 8528.787109375,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 129392.89021790627,
        "dps": 41970.81779393755,
        "modifiedDamage": 33262.2697265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 10617.51453125,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 89277.63425037602,
        "dps": 40215.89922057091,
        "modifiedDamage": 41408.306671875005,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Scorpion Tail",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 7872.7265625,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 119439.59097037501,
        "dps": 38742.293348250045,
        "modifiedDamage": 30703.63359375,
      },
      "helm": "Magepower Shishak",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 10275.0140625,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 74816.42163459751,
        "dps": 36737.34019975039,
        "modifiedDamage": 40072.554843750004,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Golden Axe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 9418.762890625,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 68581.71983171438,
        "dps": 33675.89518310452,
        "modifiedDamage": 36733.1752734375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Greataxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 6806.628173828125,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 103265.47969313673,
        "dps": 33495.941124007855,
        "modifiedDamage": 26545.84987792969,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 8562.51171875,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 71998.09213740002,
        "dps": 32432.17679078299,
        "modifiedDamage": 33393.795703125004,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Morning Star",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.0063000000000004,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.415987922211964,
        "comboDamage": 99336.68986198244,
        "dps": 29026.39757959847,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5822.537353515625,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 88335.53082183986,
        "dps": 28653.154455476597,
        "modifiedDamage": 22707.89567871094,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 7535.0103125,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 54865.375865371505,
        "dps": 26940.716146483617,
        "modifiedDamage": 29386.54021875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Francisca",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5084.46923828125,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 77138.06916836719,
        "dps": 25021.064454078154,
        "modifiedDamage": 19829.430029296876,
      },
      "helm": "Magepower Shishak",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 6935.6344921875,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 50501.084603353316,
        "dps": 24797.704634831513,
        "modifiedDamage": 27048.97451953125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Hammerhead",
    },
    Object {
      "accessory": "Amber Armlet",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.3873199999999999,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.3615301913889504,
        "comboDamage": 40237.54811680957,
        "dps": 23008.001665856013,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.415987922211964,
        "comboDamage": 66270.99468752345,
        "dps": 21649.915117283417,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 5651.257734375,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 47518.740810683994,
        "dps": 21405.236681916766,
        "modifiedDamage": 22039.905164062497,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Sledgehammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Water Bombs",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6507.508906249999,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 38068.9271015625,
        "dps": 20976.334664637787,
        "modifiedDamage": 38068.9271015625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Fumarole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4100.37841796875,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 62208.120297070316,
        "dps": 20178.2777855469,
        "modifiedDamage": 15991.475830078125,
      },
      "helm": "Magepower Shishak",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8733.761953125,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 34061.6716171875,
        "dps": 18768.29943678118,
        "modifiedDamage": 34061.6716171875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Makara",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8220.01125,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 32058.043875,
        "dps": 17664.281822852874,
        "modifiedDamage": 32058.043875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Volcano",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 4623.756328125,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 33667.38973556888,
        "dps": 16531.80308988768,
        "modifiedDamage": 18032.649679687504,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Slasher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7620.635429687501,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 29720.478175781256,
        "dps": 16376.261273269854,
        "modifiedDamage": 29720.478175781256,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Caldera",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 3280.302734375,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 49766.496237656254,
        "dps": 16142.62222843752,
        "modifiedDamage": 12793.1806640625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7021.259609375,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 27382.912476562502,
        "dps": 15088.240723686831,
        "modifiedDamage": 27382.912476562502,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Tumulus",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 3596.254921875,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 30239.198697708005,
        "dps": 13621.514252128854,
        "modifiedDamage": 14025.394195312501,
      },
      "helm": "Celebrant's Miter",
      "weapon": "War Hammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6165.008437500001,
        "chargeTime": 0.4148512459490675,
        "comboDamage": 24043.532906250002,
        "dps": 13248.211367139656,
        "modifiedDamage": 24043.532906250002,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Hornito",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 3082.5042187500003,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 22444.926490379254,
        "dps": 11021.202059925117,
        "modifiedDamage": 12021.766453125001,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Broadaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 2132.19677734375,
        "chargeTime": 0.43788516131521155,
        "comboDamage": 32348.222554476568,
        "dps": 10492.704448484388,
        "modifiedDamage": 8315.567431640626,
      },
      "helm": "Magepower Shishak",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 2055.0028125,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 17279.542112976,
        "dps": 7783.722429787916,
        "modifiedDamage": 8014.51096875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Iron Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 2060.46142578125,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 13841.825459033204,
        "dps": 6909.847739567157,
        "modifiedDamage": 8035.799560546875,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Iron Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.415987922211964,
        "comboDamage": 12734.479422310547,
        "dps": 6440.507171232416,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 1312.12109375,
        "chargeTime": 0.5705362886211938,
        "comboDamage": 19906.5984950625,
        "dps": 6190.678344502361,
        "modifiedDamage": 5117.272265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1648.369140625,
        "chargeTime": 0.4419426725816505,
        "comboDamage": 11073.460367226562,
        "dps": 5527.8781916537255,
        "modifiedDamage": 6428.6396484375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Longsword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 1455.6269921875,
        "chargeTime": 0.4030105470271208,
        "comboDamage": 10598.993064901315,
        "dps": 5204.456528297972,
        "modifiedDamage": 5676.94526953125,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Handaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.415987922211964,
        "comboDamage": 7751.422257058594,
        "dps": 3920.3087129240794,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.4078568828741861,
        "comboDamage": 519.52265625,
        "dps": 323.1149872750536,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Bonebreaker",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 3`] = `
Object {
  "elapsed": 57.65549999999996,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.615400000000001,
        "baseDmg": 10003.01416015625,
        "chargeTime": 1.301723933878439,
        "comboDamage": 528297.1892516601,
        "dps": 76375.26727896044,
        "modifiedDamage": 58517.63283691406,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.3463999990385144,
        "comboDamage": 262376.3643029649,
        "dps": 70645.98551704649,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Giant's Helmet",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 21568.871846330276,
        "chargeTime": 0.1438560099750256,
        "comboDamage": 98839.35523580849,
        "dps": 56678.62178438918,
        "modifiedDamage": 84118.60020068807,
      },
      "helm": "Giant's Helmet",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Black Robes",
      "dps": Object {
        "animationTime": 1.9867439999999998,
        "baseDmg": 8500.038990825688,
        "chargeTime": 0.30954773116591183,
        "comboDamage": 127967.27780316882,
        "dps": 55727.796284052776,
        "modifiedDamage": 49725.22809633028,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yagyu Darkblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.72882,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.42313599880775776,
        "comboDamage": 227812.9503777715,
        "dps": 54868.825787939095,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Giant's Helmet",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 9102.840087890625,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 189402.50241785747,
        "dps": 49844.79432101059,
        "modifiedDamage": 35501.07634277344,
      },
      "helm": "Magepower Shishak",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.0991359999999997,
        "baseDmg": 9607.095756880733,
        "chargeTime": 0.28448322194505626,
        "comboDamage": 104844.74152541283,
        "dps": 43985.52443282385,
        "modifiedDamage": 37467.67345183486,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mesa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 8528.787109375,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 129392.89021790627,
        "dps": 42047.194180639664,
        "modifiedDamage": 33262.2697265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 7872.7265625,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 119439.59097037501,
        "dps": 38812.79462828276,
        "modifiedDamage": 30703.63359375,
      },
      "helm": "Magepower Shishak",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.62147,
        "baseDmg": 9795.470183486237,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 70404.6088978211,
        "dps": 37167.84632089803,
        "modifiedDamage": 38202.33371559633,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mina",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.818156,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.28448322194505626,
        "comboDamage": 71467.4360241227,
        "dps": 33989.39545986943,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Koga Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.818156,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.28448322194505626,
        "comboDamage": 71467.4360241227,
        "dps": 33989.39545986943,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Iga Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 6806.628173828125,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 103265.47969313673,
        "dps": 33556.89535570281,
        "modifiedDamage": 26545.84987792969,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 8476.849197247706,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 55353.594687729346,
        "dps": 30583.105457414786,
        "modifiedDamage": 33059.71186926605,
      },
      "helm": "Giant's Helmet",
      "weapon": "Shikari Nagasa",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 53508.47486480504,
        "dps": 29563.668608834294,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Zwill Crossblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5822.537353515625,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 88335.53082183986,
        "dps": 28705.29602716746,
        "modifiedDamage": 22707.89567871094,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 7817.53870412844,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 51048.31510090596,
        "dps": 28204.419477393636,
        "modifiedDamage": 30488.400946100915,
      },
      "helm": "Giant's Helmet",
      "weapon": "Platinum Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.1869300000000003,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.41034666551288385,
        "comboDamage": 99336.68986198244,
        "dps": 27614.414763902914,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Giant's Helmet",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 7440.789850917431,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 48588.15533700688,
        "dps": 26845.17034595298,
        "modifiedDamage": 29019.08041857798,
      },
      "helm": "Giant's Helmet",
      "weapon": "Orichalcum Dirk",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6575959999999998,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.35918933233338823,
        "comboDamage": 54106.99728502149,
        "dps": 26828.33736321385,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Giant's Helmet",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5084.46923828125,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 77138.06916836719,
        "dps": 25066.59653076595,
        "modifiedDamage": 19829.430029296876,
      },
      "helm": "Magepower Shishak",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 6216.356077981651,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 40592.63610433485,
        "dps": 22427.61066877084,
        "modifiedDamage": 24243.788704128438,
      },
      "helm": "Giant's Helmet",
      "weapon": "Avenger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.7895440000000002,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.41034666551288385,
        "comboDamage": 66270.99468752345,
        "dps": 20710.39345242798,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Giant's Helmet",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4100.37841796875,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 62208.120297070316,
        "dps": 20214.997202230603,
        "modifiedDamage": 15991.475830078125,
      },
      "helm": "Magepower Shishak",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 5274.483944954128,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 34442.23669458715,
        "dps": 19029.487840169197,
        "modifiedDamage": 20570.4873853211,
      },
      "helm": "Giant's Helmet",
      "weapon": "Gladius",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 3280.302734375,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 49766.496237656254,
        "dps": 16171.997761784483,
        "modifiedDamage": 12793.1806640625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 3767.4885321100915,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 24601.59763899082,
        "dps": 13592.49131440657,
        "modifiedDamage": 14693.205275229357,
      },
      "helm": "Giant's Helmet",
      "weapon": "Chopper",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.34049,
        "baseDmg": 4332.611811926606,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 21644.957407482798,
        "dps": 13416.95328111769,
        "modifiedDamage": 16897.18606651376,
      },
      "helm": "Giant's Helmet",
      "weapon": "Main Gauche",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 2919.803612385321,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 19066.238170217886,
        "dps": 10534.180768665092,
        "modifiedDamage": 11387.234088302752,
      },
      "helm": "Giant's Helmet",
      "weapon": "Assassin's Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 2132.19677734375,
        "chargeTime": 0.4322851994418293,
        "comboDamage": 32348.222554476568,
        "dps": 10511.798545159916,
        "modifiedDamage": 8315.567431640626,
      },
      "helm": "Magepower Shishak",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.41034666551288385,
        "comboDamage": 12734.479422310547,
        "dps": 6458.9350629923265,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 1312.12109375,
        "chargeTime": 0.5631298874338171,
        "comboDamage": 19906.5984950625,
        "dps": 6204.970183479151,
        "modifiedDamage": 5117.272265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 1695.3698394495411,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 11070.71893754587,
        "dps": 6116.621091482957,
        "modifiedDamage": 6611.9423738532105,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mage Masher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 1318.620986238532,
        "chargeTime": 0.2727642876142204,
        "comboDamage": 8610.559173646787,
        "dps": 4757.371960042299,
        "modifiedDamage": 5142.621846330275,
      },
      "helm": "Giant's Helmet",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.41034666551288385,
        "comboDamage": 7751.422257058594,
        "dps": 3931.525690517068,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.4004912941611825,
        "comboDamage": 519.52265625,
        "dps": 324.6019882427925,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Bonebreaker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": "Dark Shot",
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 112.890625,
        "chargeTime": 0.6497077124908597,
        "comboDamage": 479.89804687500003,
        "dps": 213.31573173283937,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Celebrant's Miter",
      "weapon": "Altair",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 4`] = `
Object {
  "elapsed": 37.95959999999991,
  "results": Array [
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21900.35722477064,
        "chargeTime": 0.14354698320383638,
        "comboDamage": 100358.38698251145,
        "dps": 65018.03189314285,
        "modifiedDamage": 85411.39317660549,
      },
      "helm": "Thief's Cap",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.071038,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 132089.14314093164,
        "dps": 55269.61022589604,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Thief's Cap",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.4478400000000002,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.1837818003846468,
        "comboDamage": 231409.8385474688,
        "dps": 49963.02559251506,
        "modifiedDamage": 42107.58969726563,
      },
      "helm": "Thief's Cap",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.445678,
        "baseDmg": 9230.8671875,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 106808.09343323439,
        "dps": 38634.956471337515,
        "modifiedDamage": 36000.38203125,
      },
      "helm": "Thief's Cap",
      "weapon": "Kanya",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 8901.193359375,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 63977.0246299336,
        "dps": 31166.80787149043,
        "modifiedDamage": 34714.654101562504,
      },
      "helm": "Thief's Cap",
      "weapon": "Whale Whisker",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 7500.07958984375,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 53906.5670492959,
        "dps": 26260.92144727434,
        "modifiedDamage": 29250.310400390626,
      },
      "helm": "Thief's Cap",
      "weapon": "Eight-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 10902.36123853211,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 48471.89806651377,
        "dps": 26237.39233797971,
        "modifiedDamage": 42519.20883027523,
      },
      "helm": "Thief's Cap",
      "weapon": "Dhanusha",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 7252.82421875,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 52129.42747624219,
        "dps": 25395.176784177387,
        "modifiedDamage": 28286.014453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Sweep",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Fiery Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7459.510321100917,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 45165.47011668577,
        "dps": 24447.653317695072,
        "modifiedDamage": 43638.13537844036,
      },
      "helm": "Thief's Cap",
      "weapon": "Burning Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 49167.528187819335,
        "dps": 23952.269012349123,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Thief's Cap",
      "weapon": "Ivory Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.377954,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.3305554896633079,
        "comboDamage": 40237.54811680957,
        "dps": 23551.258193326805,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Thief's Cap",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.90245,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.3773076162781758,
        "comboDamage": 51791.7888932666,
        "dps": 22718.112014828763,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Thief's Cap",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 6346.22119140625,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 45613.24904171191,
        "dps": 22220.77968615521,
        "modifiedDamage": 24750.262646484374,
      },
      "helm": "Thief's Cap",
      "weapon": "Zephyr Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9754.744266055046,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 39375.0252299312,
        "dps": 21313.338789785455,
        "modifiedDamage": 38043.502637614685,
      },
      "helm": "Thief's Cap",
      "weapon": "Sagittarius",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 5934.12890625,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 42651.34975328906,
        "dps": 20777.871914326948,
        "modifiedDamage": 23143.102734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Gokuu Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9467.84002293578,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 38216.93625258027,
        "dps": 20686.475884203523,
        "modifiedDamage": 36924.57608944954,
      },
      "helm": "Thief's Cap",
      "weapon": "Artemis Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9276.570527522936,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 37444.87693434633,
        "dps": 20268.567280482242,
        "modifiedDamage": 36178.62505733945,
      },
      "helm": "Thief's Cap",
      "weapon": "Perseus Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8989.66628440367,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 36286.78795699541,
        "dps": 19641.704374900317,
        "modifiedDamage": 35059.69850917431,
      },
      "helm": "Thief's Cap",
      "weapon": "Yoichi Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8320.223050458715,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 33584.5803431766,
        "dps": 18179.024261875824,
        "modifiedDamage": 32448.869896788994,
      },
      "helm": "Thief's Cap",
      "weapon": "Traitor's Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 4862.68896484375,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 34950.41160338965,
        "dps": 17026.311707573474,
        "modifiedDamage": 18964.486962890627,
      },
      "helm": "Thief's Cap",
      "weapon": "Six-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.7619600000000002,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.3773076162781758,
        "comboDamage": 36182.87825358984,
        "dps": 16913.67549261535,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Thief's Cap",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7459.510321100917,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 30110.313411123847,
        "dps": 16298.435545130047,
        "modifiedDamage": 29092.090252293576,
      },
      "helm": "Thief's Cap",
      "weapon": "Giant Stonebow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6216.258600917431,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 25091.92784260321,
        "dps": 13582.029620941708,
        "modifiedDamage": 24243.40854357798,
      },
      "helm": "Thief's Cap",
      "weapon": "Loxley Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 3791.2490234375,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 27249.473453490235,
        "dps": 13274.751500819995,
        "modifiedDamage": 14785.87119140625,
      },
      "helm": "Thief's Cap",
      "weapon": "Iron Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 5642.450114678899,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 22775.749887901376,
        "dps": 12328.303809777859,
        "modifiedDamage": 22005.55544724771,
      },
      "helm": "Thief's Cap",
      "weapon": "Elfin Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 3214.31982421875,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 23102.814449698242,
        "dps": 11254.680620260431,
        "modifiedDamage": 12535.847314453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Musk Stick",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 5068.641628440367,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 19767.70235091743,
        "dps": 10700.075360979718,
        "modifiedDamage": 19767.70235091743,
      },
      "helm": "Thief's Cap",
      "weapon": "Longbow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 2802.2275390625,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 20140.915161275392,
        "dps": 9811.772848432172,
        "modifiedDamage": 10928.68740234375,
      },
      "helm": "Thief's Cap",
      "weapon": "Battle Bamboo",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 3921.0246559633024,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 15827.21602379587,
        "dps": 8567.12637628631,
        "modifiedDamage": 15291.996158256881,
      },
      "helm": "Thief's Cap",
      "weapon": "Killer Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 1813.2060546875,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 13032.356869060548,
        "dps": 6348.794196044347,
        "modifiedDamage": 7071.50361328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Cypress Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 2869.0424311926604,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 11580.889773509174,
        "dps": 6268.62905581925,
        "modifiedDamage": 11189.265481651377,
      },
      "helm": "Thief's Cap",
      "weapon": "Aevis Killer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.345173,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.3773076162781758,
        "comboDamage": 9470.20263938379,
        "dps": 5498.002444780127,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 2295.233944954128,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 9264.711818807338,
        "dps": 5014.903244655399,
        "modifiedDamage": 8951.4123853211,
      },
      "helm": "Thief's Cap",
      "weapon": "Silver Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6608071999999998,
        "baseDmg": 1338.886467889908,
        "chargeTime": 0.272115331394723,
        "comboDamage": 8742.892217609173,
        "dps": 4523.146725027121,
        "modifiedDamage": 5221.657224770642,
      },
      "helm": "Thief's Cap",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 1236.27685546875,
        "chargeTime": 0.31886745800959093,
        "comboDamage": 8885.697865268556,
        "dps": 4328.723315484782,
        "modifiedDamage": 4821.479736328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Oaken Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 1912.6949541284403,
        "chargeTime": 0.44743580620047757,
        "comboDamage": 7720.5931823394485,
        "dps": 4179.086037212833,
        "modifiedDamage": 7459.510321100917,
      },
      "helm": "Thief's Cap",
      "weapon": "Shortbow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.345173,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.3773076162781758,
        "comboDamage": 5764.471171798828,
        "dps": 3346.610183779208,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.37671923318184836,
        "comboDamage": 471.09257812500005,
        "dps": 298.780257265161,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Bonebreaker",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 5`] = `
Object {
  "elapsed": 69.92430000000013,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.873324,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 262376.3643029649,
        "dps": 60232.10917650575,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Thief's Cap",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 21789.862098623853,
        "chargeTime": 0.1975159387208878,
        "comboDamage": 99852.0430669438,
        "dps": 55550.01817563771,
        "modifiedDamage": 84980.46218463303,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.9817020000000003,
        "baseDmg": 9230.8671875,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 218077.35420778126,
        "dps": 48847.35536227151,
        "modifiedDamage": 36000.38203125,
      },
      "helm": "Thief's Cap",
      "weapon": "Kanya",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 6.284400000000001,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.803211863703453,
        "comboDamage": 380147.3197869141,
        "dps": 47003.65524376663,
        "modifiedDamage": 42107.58969726563,
      },
      "helm": "Thief's Cap",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.174888,
        "baseDmg": 11388.1405859375,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 172773.03392912063,
        "dps": 45676.227639787394,
        "modifiedDamage": 44413.74828515625,
      },
      "helm": "Thief's Cap",
      "weapon": "Vrscika",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 8901.193359375,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 109960.74974594534,
        "dps": 38248.255810989685,
        "modifiedDamage": 34714.654101562504,
      },
      "helm": "Thief's Cap",
      "weapon": "Whale Whisker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 10617.51453125,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 89277.63425037602,
        "dps": 34368.92815551957,
        "modifiedDamage": 41408.306671875005,
      },
      "helm": "Thief's Cap",
      "weapon": "Scorpion Tail",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 7500.07958984375,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 92652.11321186135,
        "dps": 32227.697025926493,
        "modifiedDamage": 29250.310400390626,
      },
      "helm": "Thief's Cap",
      "weapon": "Eight-fluted Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 10275.0140625,
        "chargeTime": 0.554139502162291,
        "comboDamage": 74816.42163459751,
        "dps": 31882.823428364165,
        "modifiedDamage": 40072.554843750004,
      },
      "helm": "Thief's Cap",
      "weapon": "Golden Axe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 7252.82421875,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 89597.64794114063,
        "dps": 31165.24547562122,
        "modifiedDamage": 28286.014453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Sweep",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 84506.87248993946,
        "dps": 29394.492891779104,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Thief's Cap",
      "weapon": "Ivory Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 9418.762890625,
        "chargeTime": 0.554139502162291,
        "comboDamage": 68581.71983171438,
        "dps": 29225.92147600048,
        "modifiedDamage": 36733.1752734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Greataxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 8562.51171875,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 71998.09213740002,
        "dps": 27716.877544773844,
        "modifiedDamage": 33393.795703125004,
      },
      "helm": "Thief's Cap",
      "weapon": "Morning Star",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 6346.22119140625,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 78397.94194849806,
        "dps": 27269.58979116857,
        "modifiedDamage": 24750.262646484374,
      },
      "helm": "Thief's Cap",
      "weapon": "Zephyr Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 5934.12890625,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 73307.16649729689,
        "dps": 25498.837207326455,
        "modifiedDamage": 23143.102734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Gokuu Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.4879800000000003,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.5719833930414504,
        "comboDamage": 99336.68986198244,
        "dps": 24467.3856006288,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Thief's Cap",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.765974,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.5006078295248126,
        "comboDamage": 54106.99728502149,
        "dps": 23871.627567209864,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Thief's Cap",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 7535.0103125,
        "chargeTime": 0.554139502162291,
        "comboDamage": 54865.375865371505,
        "dps": 23380.737180800385,
        "modifiedDamage": 29386.54021875,
      },
      "helm": "Thief's Cap",
      "weapon": "Francisca",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 6935.6344921875,
        "chargeTime": 0.554139502162291,
        "comboDamage": 50501.084603353316,
        "dps": 21520.905814145808,
        "modifiedDamage": 27048.97451953125,
      },
      "helm": "Thief's Cap",
      "weapon": "Hammerhead",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 4862.68896484375,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 60071.15032417384,
        "dps": 20894.880489336956,
        "modifiedDamage": 18964.486962890627,
      },
      "helm": "Thief's Cap",
      "weapon": "Six-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Water Bombs",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6507.508906249999,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 38068.9271015625,
        "dps": 19320.204906989682,
        "modifiedDamage": 38068.9271015625,
      },
      "helm": "Thief's Cap",
      "weapon": "Fumarole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.0303839999999997,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.5719833930414504,
        "comboDamage": 66270.99468752345,
        "dps": 18396.511920337856,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Thief's Cap",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 5651.257734375,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 47518.740810683994,
        "dps": 18293.13917955073,
        "modifiedDamage": 22039.905164062497,
      },
      "helm": "Thief's Cap",
      "weapon": "Sledgehammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8733.761953125,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 34061.6716171875,
        "dps": 17286.49912730656,
        "modifiedDamage": 34061.6716171875,
      },
      "helm": "Thief's Cap",
      "weapon": "Makara",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 3791.2490234375,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 46835.134151050785,
        "dps": 16290.923771347456,
        "modifiedDamage": 14785.87119140625,
      },
      "helm": "Thief's Cap",
      "weapon": "Iron Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8220.01125,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 32058.043875,
        "dps": 16269.646237464996,
        "modifiedDamage": 32058.043875,
      },
      "helm": "Thief's Cap",
      "weapon": "Volcano",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7620.635429687501,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 29720.478175781256,
        "dps": 15083.317865983177,
        "modifiedDamage": 29720.478175781256,
      },
      "helm": "Thief's Cap",
      "weapon": "Caldera",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 4623.756328125,
        "chargeTime": 0.554139502162291,
        "comboDamage": 33667.38973556888,
        "dps": 14347.270542763874,
        "modifiedDamage": 18032.649679687504,
      },
      "helm": "Thief's Cap",
      "weapon": "Slasher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7021.259609375,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 27382.912476562502,
        "dps": 13896.989494501353,
        "modifiedDamage": 27382.912476562502,
      },
      "helm": "Thief's Cap",
      "weapon": "Tumulus",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 3214.31982421875,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 39708.04851936915,
        "dps": 13811.870153968497,
        "modifiedDamage": 12535.847314453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Musk Stick",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6165.008437500001,
        "chargeTime": 0.5704204631799679,
        "comboDamage": 24043.532906250002,
        "dps": 12202.23467809875,
        "modifiedDamage": 24043.532906250002,
      },
      "helm": "Thief's Cap",
      "weapon": "Hornito",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 2802.2275390625,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 34617.273068167975,
        "dps": 12041.117570126382,
        "modifiedDamage": 10928.68740234375,
      },
      "helm": "Thief's Cap",
      "weapon": "Battle Bamboo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 3596.254921875,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 30239.198697708005,
        "dps": 11641.088568805015,
        "modifiedDamage": 14025.394195312501,
      },
      "helm": "Thief's Cap",
      "weapon": "War Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 3082.5042187500003,
        "chargeTime": 0.554139502162291,
        "comboDamage": 22444.926490379254,
        "dps": 9564.847028509248,
        "modifiedDamage": 12021.766453125001,
      },
      "helm": "Thief's Cap",
      "weapon": "Broadaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 1813.2060546875,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 22399.411985285158,
        "dps": 7791.311368905305,
        "modifiedDamage": 7071.50361328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Cypress Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 2055.0028125,
        "chargeTime": 0.6076711747997694,
        "comboDamage": 17279.542112976,
        "dps": 6652.050610745721,
        "modifiedDamage": 8014.51096875,
      },
      "helm": "Thief's Cap",
      "weapon": "Iron Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.645554,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.5719833930414504,
        "comboDamage": 12734.479422310547,
        "dps": 5742.622181826953,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 1236.27685546875,
        "chargeTime": 0.48276393864565315,
        "comboDamage": 15272.326353603517,
        "dps": 5312.257751526345,
        "modifiedDamage": 4821.479736328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Oaken Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 1455.6269921875,
        "chargeTime": 0.554139502162291,
        "comboDamage": 10598.993064901315,
        "dps": 4516.733319018257,
        "modifiedDamage": 5676.94526953125,
      },
      "helm": "Thief's Cap",
      "weapon": "Handaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.645554,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.5719833930414504,
        "comboDamage": 7751.422257058594,
        "dps": 3495.509154155537,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 1903.044724770642,
        "chargeTime": 0.6157240460618627,
        "comboDamage": 7681.640031536696,
        "dps": 3466.875780487976,
        "modifiedDamage": 7421.874426605505,
      },
      "helm": "Steel Mask",
      "weapon": "Shortbow",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.5547011736205563,
        "comboDamage": 519.52265625,
        "dps": 296.0747186246219,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Bonebreaker",
    },
  ],
}
`;
